--- a/AUTHORS
+++ b/AUTHORS
@@ -1,18 +1,25 @@
 
-       The following people have contributed to Inviwo:
+The following people have contributed to Inviwo:
 
 ------ Core Team ------
 
-Erik Sundén
-Daniel Jönsson
-Martin Falk
 Peter Steneteg
+Martin Falk
+Daniel Jönsson
 Rickard Englund
-Sathish Kottravel
 Timo Ropinski
+Anke Friederici
+Julian Kreiser
+Dominik Engel
 
-------- Former Developers -------
+------- Contributors -------
 
+Erik Sundén
+Sathish Kottravel
+Robin Skånberg
+Jochen Jankowai
+Tino Weinkauf
+Wiebke Köpp
 Alexander Johansson
 Andreas Valter
 Johan Norén
